# active-guidance-rockets

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bayesian_optimize.py  cascade_dob.py  compare_controllers.py  disturbance_observer.py  ensemble_controller.py  experimental_results.md  fll_controller.py  fourier_adaptive.py  generate_motor_config.py  gp_disturbance.py  hinf_controller.py  lateral_dynamics.py  motor_loader.py  online_identification.py  optimize_pid.py  pid_controller.py  pyproject.toml  realistic_spin_rocket.py  repetitive_controller.py  rocket_boost_control_env.py  rocket_config.py  run_dryden_experiments.sh  run_experiment.sh  run_training.sh  setup_and_train.sh  slide_review_report.md  spin_stabilized_control_env.py  sta_smc_controller.py  sweep_hyperparams.py  test_env.py  thrustcurve_motor_data.py  train_improved.py  train_ppo.py  train_progressive.sh  train_residual_sac.py  train_sac.py  (+7 more)
.github/workflows/: deploy-slides.yml  tests.yml
airframe/: __init__.py  airframe.py  components.py  openrocket_parser.py
camera_electronics/: dollatek_modification_guide.md
configs/: aerotech_f40_easy.yaml  aerotech_f40_full.yaml  aerotech_f40_medium.yaml  aerotech_h128_easy.yaml  aerotech_j800_dryden_moderate.yaml  aerotech_j800_residual_sac_wind.yaml  aerotech_j800_sac_wind.yaml  aerotech_j800_wind.yaml  aerotech_k550w_easy.yaml  aerotech_k550w_full.yaml  aerotech_k550w_medium.yaml  antihack_sweep.yaml  cesaroni_g79.yaml  debug.yaml  estes_alpha.yaml  estes_c6.yaml  estes_c6_200hz.yaml  estes_c6_4fin.yaml  estes_c6_4fin_200hz.yaml  estes_c6_500hz.yaml  estes_c6_bigtab.yaml  estes_c6_delta.yaml  estes_c6_dob_sac.yaml  estes_c6_dryden_light.yaml  estes_c6_dryden_moderate.yaml  estes_c6_dryden_severe.yaml  estes_c6_easy.yaml  estes_c6_easy_start.yaml  estes_c6_full.yaml  estes_c6_medium.yaml  estes_c6_residual.yaml  estes_c6_residual_sac_antihack.yaml  estes_c6_residual_sac_wind.yaml  estes_c6_sac_wind.yaml  estes_c6_smooth.yaml  estes_c6_tab10.yaml  estes_c6_tab15.yaml  estes_c6_tab25.yaml  estes_c6_tab30.yaml  estes_c6_tight_spin.yaml  (+2 more)
configs/airframes/: estes_alpha.yaml  j800_75mm.yaml
configs/sac_sweep/: eval_sweep.sh  j800_sac_a100_e001.yaml  j800_sac_a100_e005.yaml  j800_sac_a50_e001.yaml  j800_sac_a50_e005.yaml  j800_sac_a80_e001.yaml  j800_sac_a80_e005.yaml  run_sweep.sh
controllers/: __init__.py  adrc_controller.py  pid_controller.py  video_quality_metric.py
deployment/: RASPBERRY_PI_GUIDE.md  export_all.py  export_onnx.py
docs/: experimental_results.md  wind_roll_torque_analysis.md
flight_data/: 2024-10-12-serial-8617-flight-0001.csv
hardware/: README.md  dollatek_modification_guide.md
hardware/docs/: DESIGN_BRIEF.md  DESIGN_DOCUMENT.md
hardware/scad/: aileron.scad  assembly.scad  servo_arm_adapter.scad  servo_mount.scad
optimization/: __init__.py  bayesian_optimize.py  optimize_pid.py
optimization_results/: bo_adrc_params.json  bo_gs_pid_dryden_light.json  bo_gs_pid_dryden_moderate.json  bo_gs_pid_dryden_severe.json  bo_gs_pid_j800_params.json  bo_gs_pid_params.json  gs_pid_j800_imu_lhs_optimization.json  gs_pid_j800_imu_optimization.json  gs_pid_j800_imu_wide_optimization.json  gs_pid_j800_optimization.json  pid_optimization.json  pid_optimization_200hz.json  pid_optimization_4fin.json  pid_optimization_4fin_200hz.json  pid_optimization_dryden_light.json  pid_optimization_dryden_moderate.json  pid_optimization_dryden_severe.json  pid_optimization_tab10.json
rocket-fin-servo-mount/docs/: DESIGN_DOCUMENT.md
rocket-fin-servo-mount/scad/: aileron.scad  assembly.scad  config.scad  servo_arm_adapter.scad  servo_mount.scad
rocket_env/: __init__.py
rocket_env/inference/: __init__.py  controller.py  onnx_runner.py
rocket_env/sensors/: __init__.py  gyro_model.py  imu_wrapper.py
scripts/: export_onnx.py
simulation/: __init__.py  config.py  environment.py  motors.py  rocket.py  wind.py
simulation/sensors/: imu_config.py  imu_wrapper.py
slides/: README.md  github_pages_setup.md  index.html  slides.md
tests/: __init__.py  conftest.py  test_adrc_controller.py  test_airframe.py  test_bayesian_optimize.py  test_cascade_dob.py  test_compare_controllers.py  test_coverage_gaps.py  test_disturbance_observer.py  test_documentation_consistency.py  test_ensemble_controller.py  test_environment.py  test_evaluate_controller.py  test_fll.py  test_fourier_adaptive.py  test_gain_scheduled_pid.py  test_generate_motor_config.py  test_gp_disturbance.py  test_gyro_model.py  test_hardware_param_studies.py  test_hinf.py  test_imu_config.py  test_imu_mode_controllers.py  test_imu_wrapper.py  test_inference.py  test_integration_audit.py  test_j800_physics.py  test_lead_compensated_pid.py  test_lead_compensator.py  test_motor_loader.py  test_online_identification.py  test_openrocket_parser.py  test_optimization_modules.py  test_optimize_pid.py  test_pid_controller.py  test_pid_evaluate.py  test_pid_gains_consistency.py  test_realistic_motor_rocket.py  test_realistic_spin_rocket.py  test_remaining_coverage.py  (+13 more)
training/: __init__.py  train_improved.py  train_residual_sac.py  train_sac.py
visualizations/: animate_roll_control.py  animate_stability.py  plot_3d_flight.py  plot_flight_dynamic_pressure.py  roll_rate_montecarlo.py  trajectory_montecarlo.py  trajectory_wind_analysis.py  visualize_airframe.py  visualize_motor.py  visualize_spin_agent.py  wind_field_visualization.py
